# tfjs-to-tf

./: .gitignore  .markdownlint.json  DOCUMENTATION.md  LICENSE  README.md  converter_test.py  pyproject.toml  setup.py
docker/: Dockerfile  README.md
docs/: api.rst  converter.rst  graph_rewrite_util.rst  models.rst  modules.rst  optimization.rst  util.rst
tests/: api_test.py  check_image.py  generate_test_models.py  graph_rewrite_util_test.py  issue-36.py  optimization_test.py  quirks_test.py  testutils.py  util_test.py
tests/data/: README.md
tests/models/: atari_net.json  readme.txt
tests/models/prelu/: keras.h5  model.json
tests/models/simple/: frozen_graph.pb  model.json
tfjs_graph_converter/: __init__.py  api.py  common.py  compat.py  convert_fused_depthwise.py  convert_prelu.py  converter.py  graph_rewrite_util.py  optimization.py  quirks.py  util.py  version.py
